
1.10 (unreleased)
-----------------

- Suche: Anzeigen wenn es erweiterte Kriterien gibt, die erweiterte Suche aber
  eingeklappt ist (Bug #4388).
- Suche: Der Dateiname wird jetzt angezeigt (Bug #4440).
- Sperren: Es wird wieder angezeigt wer ein Objekt gesperrt hat.
- Bei ausgecheckten Dokumenten gibt es jetzt eine Aktion um zu dem Original in
  der Dateiverwaltung zu kommen (Bug #4419).

1.9.1 (2009-01-21)
------------------

- Unterstützung von zope.app.renderer 3.5.0
- Checkout gesperrter Objekte konnte zu LockingError führen (Bug #4631).
- Biga Veröffentlichen mit nicht vorhandenem Bilderordner führte zu unklarer
  Fehlermeldung (Bug #4630).

1.9 (2009-01-19)
----------------

- Interface-Deklaration auf Objekten werden im DAV abgelegt und gehen nicht
  mehr verloren.
- Select-Box bei Bildergruppen entfernt.
- Bildergruppen haben ein Master-Bild von dem die Ausschnitte abgeleitet
  werden.

1.8.4 (2009-01-07)
------------------

- Repository funktioniert auch ohne Product-Config.

1.8.3 (2008-12-12)
------------------

- Sperren von nicht vorhandenen Objekten ist nicht mehr möglich. Das sorgt
  dafür, dass der Hit-Importer nicht mehr frei dreht wenn im Cache noch ein
  Objekt vorhanden ist, welches es aber nicht mehr gibt.

1.8.2 (2008-12-10)
------------------

- Kompatibel mit Python 2.5.
- Product-Config vor den Tests leeren.

1.8.1 (2008-12-08)
------------------

- WYSIWYG-Editor: Knopf zum Einfügen von Audio fügt jetzt ein Audio ein und
  nicht ein Video.

1.8 (2008-12-08)
----------------

- Einfügen aus Word in Kombination mit Firefox 3 verbessert (Bug #4529).
- WYSIWYG-Editor: Knopf zum Einfügen von Audio.
- WYSIWYG-Editor: Javascript-Fehler bei Bild-Einfügen entfernt.

1.7.1 (2008-11-27)
------------------

- Bilder können wieder innerhalb von Absätzen erzeugt werden.

1.7 (2008-11-27)
----------------

- Keyword-Suche sucht jetzt auch in Labels. Damit funktionieren auch Umlaute.
  (Bug #4520)
- Keyword-Vorschlags-Mail mit Betreff (Bug #4281).